Changelog
=========

0.1.19 - 
-------------------

- Fix TextArea and Markdown widgets to work with light theme.
  [ggozad]

0.1.18 - 2024-01-05
-------------------

- Bug fixes.
  [ggozad]

0.1.17 - 2023-12-19
-------------------

- Support multimodal models, allow adding images to chat messages.
  [ggozad]

- Change key bindings so that they can be invoked without loosing prompt focus.
  [ggozad]

- Add key binding to switch to multiline input using ctrl+n.
  [ggozad]

0.1.16 - 2023-12-07
-------------------

- Support markdown in chat messages.
  [ggozad]

- Show db location with when running with `--db`.
  [ggozad]

0.1.15 - 2023-12-07
-------------------

- Fix crash on renaming a chat.
  [ggozad]

0.1.14 - 2023-12-06
-------------------

- Automate pypi releases through github actions.
  [ggozad]

- Minor bug fixes.
  [ggozad]

0.1.13 - 2023-12-04
-------------------

- Forgotten db upgrade.
  [ggozad]

0.1.11 - 2023-11-29
-------------------

- Syntax highlighting for json responses.
  [ggozad]

- Support for `format` parameter in Ollama (essentially json for the time being).
  [ggozad]

0.1.10 - 2023-11-14
-------------------

- Prompt widget improvements.
  [ggozad]

- When pasting multiline text to the singleline input, switch to multiline textarea
  [ggozad]

- Disable SSL verification via OTERM_VERIFY_SSL.
  [huynle]

0.1.9 - 2023-11-04
------------------

- Introduce FlexibleInput, an input that can be multiline.
  [ggozad]

0.1.8 - 2023-11-03
------------------

- Remove distutils dependency, make oterm compatible with python 3.12.
  [denehoffman]

0.1.7 - 2023-11-01
------------------

- Allow customizing the system and template of models.
  [ggozad]

- DB migrations.
  [ggozad]


0.1.5 - 2023-11-01
------------------

- Fix whitespace bug in model selection screen.
  [ggozad]

0.1.4 - 2023-10-18
------------------

- Show template, system, and params in the model selection screen.
  [ggozad]

- Click to copy to clipboard.
  [ggozad]
